[gd_scene load_steps=4 format=3 uid="uid://c1jjph5spjoow"]

[ext_resource type="Script" path="res://scripts/old/undead.gd" id="1_0liqk"]
[ext_resource type="PackedScene" uid="uid://d251731vm1bes" path="res://assets/mesh/blender models/zombequin.blend" id="2_2lscq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7vyjk"]
radius = 0.1
height = 0.35

[node name="Undead" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 4
collision_mask = 9
platform_floor_layers = 4294967048
platform_wall_layers = 16
script = ExtResource("1_0liqk")

[node name="Mesh" type="Node3D" parent="."]

[node name="zombequin" parent="Mesh" instance=ExtResource("2_2lscq")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, -0.25, 0)

[node name="Ch36" parent="Mesh/zombequin/Armature/Skeleton3D" index="0"]
lod_bias = 0.05

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("CapsuleShape3D_7vyjk")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="CollisionShape3D"]

[node name="HealthBarPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.387422, 0)

[node name="Label3D" type="Label3D" parent="HealthBarPivot"]
modulate = Color(0.486275, 1, 0.682353, 1)
text = "-"

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 5)
collide_with_areas = true
collide_with_bodies = false

[node name="DetectionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="DetectionTimer" to="." method="_on_detection_timer_timeout"]

[editable path="Mesh/zombequin"]
